--- a/systemInfos/static/systemInfos/StyleSheet.css
+++ b/systemInfos/static/systemInfos/StyleSheet.css
@@ -1,13 +1,15 @@
+{% load static %}
 table.gridtable {
 	font-family: verdana,arial,sans-serif;
-	font-size:11px;
+	font-size:15px;
 	color:#333333;
 	border-width: 1px;
 	border-color: #666666;
 	border-collapse: collapse;
-	text-align: center
-	margin-left:auto;
-    margin-right:auto;
+	text-align: left;
+    width:60%;
+    margin-left:20%;
+    margin-right:20%;
 }
 table.gridtable th {
 	border-width: 1px;
@@ -23,7 +25,7 @@ table.gridtable td {
 	border-style: solid;
 	border-color: #666666;
 	background-color: #ffffff;
-	text-align: center
+	text-align: left
 }
 table.gridtable caption {
 	border-width: 1px;
@@ -32,26 +34,41 @@ table.gridtable caption {
 	background-color: #ffffff;
 	text-align: center
 }
-
-
-table.gridtable tr:hover {
-  background-color: #ffff99;
-}
-
 table.center {
     margin-left:auto;
     margin-right:auto;
 }
 
-.center {
+.center{
  text-align: center
+}
+
+div.center{
+    text-align: center;
+    max-width:900px;
+    margin-left:500px;
+}
+p.center{
+    text-align: center;
 }
 
 h1
 {
   font-family: verdana,arial,sans-serif;
-  font-size: 30px;
+  font-size: 25px;
   text-align: center;
   text-decoration: underline;
   color: blue;
+}
+
+#myInput {
+  background-image: url('/css/searchicon.png'); /* Add a search icon to input */
+  background-position: 10px 12px; /* Position the search icon */
+  background-repeat: no-repeat; /* Do not repeat the icon image */
+  width: 60%; /* Full-width */
+  font-size: 16px; /* Increase font-size */
+  padding: 12px 20px 12px 40px; /* Add some padding */
+  border: 1px solid #ddd; /* Add a grey border */
+  margin-bottom: 12px; /* Add some space below the input */
+
 }
