--- a/systemInfos/templates/systeminfos/systeminfos.html
+++ b/systemInfos/templates/systeminfos/systeminfos.html
@@ -10,9 +10,11 @@
     <title>systeminfos</title>
     <link href="{% static 'systemInfos/StyleSheet.css' %}"
           rel="stylesheet" type="text/css"/>
-
+    <script src="{% static 'systemInfos/process.js' %}"  type="text/javascript"></script>
 </head>
-
+<div class="w3-container w3-teal">
+  <h1>SysMon</h1>
+</div>
 <body>
 <h1 class="center">System</h1>
 <p class="center">Hostname: {{ systeminfo_list.get_hostname }}</p>
@@ -39,7 +41,7 @@
 <p class="center">Used Memory: {{ systeminfo_list.get_used_memory }}</p>
 <p class="center">Percentage Used: {{ systeminfo_list.get_percent_memory }}%</p>
 <h1 class="center">Disk INFO</h1>
-<table class="gridtable center">
+<table class="gridtable">
   <tr>
     <th>device</th><th>mountpoint</th><th>fstype</th><th>total</th><th>used</th><th>free</th><th>percent</th>
 
@@ -57,7 +59,7 @@
 
 <h1 class="center">Network</h1>
 {% for networkname,networkinfo in systeminfo_list.get_network.items %}
-   <table class="gridtable center tbl">
+   <table class="gridtable">
     <caption>{{networkname}}</caption>
   <tr>
     <th>Address</th><th>Netmask</th><th>Broadcast</th>
@@ -72,19 +74,47 @@
 {% endfor %}
 
 <h1 class="center">Processes</h1>
-
-  <table class="gridtable center">
-      <tr>
-    <th>pid</th><th>name</th><th>create_time</th><th>cores</th><th>cpu_usage</th><th>status</th>><th>nice<th>memory_usage</th><th>n_threads</th><th>username</th>
+ <p class="center"><input type="text" id="processInput" onkeyup="searchProcessTable()" placeholder="Search for processes.."></p>
+<table class="gridtable center" id="processTable">
+    <tr>
+        <th>pid</th>
+        <th>name</th>
+        <th>create_time</th>
+        <th>cores</th>
+        <th>cpu_usage</th>
+        <th>status</th>
+        <th>nice</th>
+        <th>memory_usage</th>
+        <th>n_threads</th>
+        <th>username</th>
     </tr>
 {% for processes in systeminfo_list.get_proc %}
-      <tr>
-     {% for  key, value in processes.items %}
+    <tr>
+     {% for key, value in processes.items %}
         <td>{{value}}</td>
       {% endfor %}
     </tr>
 {% endfor %}
 </table>
+
+<h1 class="center">Logs</h1>
+ <p class="center"><input type="text" id="logInput" onkeyup="searchLogTable()" placeholder="Search for log.."></p>
+<table class="gridtable center" id="logTable">
+    <tr>
+        <th>timestamp</th>
+        <th>hostname</th>
+        <th>process</th>
+        <th>message</th>
+    </tr>
+{% for log in systeminfo_list.get_logs %}
+      <tr>
+     {% for key, value in log.items %}
+        <td>{{value}}</td>
+      {% endfor %}
+    </tr>
+{% endfor %}
+</table>
+
 </body>
 </html>
 
