--- a/systemInfos/static/systemInfos/StyleSheet.css
+++ b/systemInfos/static/systemInfos/StyleSheet.css
@@ -6,10 +6,10 @@ table.gridtable {
 	border-width: 1px;
 	border-color: #666666;
 	border-collapse: collapse;
-	text-align: left;
-    width:60%;
-    margin-left:20%;
-    margin-right:20%;
+	text-align: center;
+    width:50%;
+    margin-left:25%;
+    margin-right:25%;
 }
 table.gridtable th {
 	border-width: 1px;
@@ -25,7 +25,7 @@ table.gridtable td {
 	border-style: solid;
 	border-color: #666666;
 	background-color: #ffffff;
-	text-align: left
+	text-align: center
 }
 table.gridtable caption {
 	border-width: 1px;
@@ -44,9 +44,10 @@ table.center {
 }
 
 div.center{
+    margin-left:auto;
+    margin-right:auto;
     text-align: center;
-    max-width:900px;
-    margin-left:500px;
+
 }
 p.center{
     text-align: center;
@@ -57,8 +58,7 @@ h1
   font-family: verdana,arial,sans-serif;
   font-size: 25px;
   text-align: center;
-  text-decoration: underline;
-  color: blue;
+  color: grey;
 }
 
 #myInput {
@@ -71,4 +71,43 @@ h1
   border: 1px solid #ddd; /* Add a grey border */
   margin-bottom: 12px; /* Add some space below the input */
 
+}
+
+.filter{
+  position:absolute;
+  border: solid 1px;
+  top : 20px;
+  background-color : white;
+  width:100px;
+  right:0;
+  display:none;
+}
+
+span{
+}
+span::after {
+ content : attr(data-value);
+ top:0px;
+ left:-60x;
+ position:relative;
+}
+
+.bar-block .bar-item {
+    width: 100%;
+    display: block;
+    padding: 8px 16px;
+    text-align: left;
+    border: none;
+    white-space: normal;
+    float: none;
+    outline: 0;
+}
+
+.sidebar {
+    height: 100%;
+    width: 50px;
+    background-color: #fff;
+    position: fixed !important;
+    z-index: 1;
+    overflow: auto;
 }
